# ValaPlugin

./: README.md  meson.build  meson_options.txt
data/: meson.build  plugin.in
src/: example-vala.vala  meson.build
